fixed text overflow on nav buttons

--- a/lambda-notes/src/App.css
+++ b/lambda-notes/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .ScrollOverflow {
-  /* overflow-y: scroll; */
+  overflow-y: scroll;
   background-color: #F3F3F3;
   width: 100%;
   height: 100%;
